# Arcionr

./: .gitignore  README.md
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  imagetracer.d.ts  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: Combine.tsx  FileQueue.tsx  Icon.tsx  Intake.tsx  Organize.tsx  PdfManager.tsx  Settings.tsx  Sidebar.tsx
desktop/src/lib/: convert.ts  formats.ts  fsutil.ts  pdf.ts  prefs.ts  theme.ts  types.ts
desktop/src/styles/: app.css  theme.css
mobile/: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json
mobile/android/app/: build.gradle
mobile/android/app/src/main/java/com/eve/arcionr/: MainActivity.java
mobile/android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
mobile/src/: App.tsx  main.tsx  styles.css
mobile/src/lib/: convert.ts  save.ts
