[package]
name = "arcionr"
version = "0.1.0"
description = "Arcionr — conversor multi-formato, offline y por lotes"
authors = ["Eve"]
edition = "2021"

[lib]
name = "arcionr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Motor de imagen (raster). Formatos por defecto: png, jpeg, gif, bmp, tiff, webp.
# AVIF/HEIC quedan para fase 2 (requieren features con dependencias C).
image = "0.25"
